--- a/src/app/admin/admin-seasonplacement/admin-seasonplacement.component.html
+++ b/src/app/admin/admin-seasonplacement/admin-seasonplacement.component.html
@@ -19,7 +19,7 @@
                 keyExpr="BikeRaceDetailId"
                 searchExpr="Name"
                 searchMode="contains"
-                [selectionMode]="multiple"
+                selectionMode="multiple"
                 [showSelectionControls]="true"
                 [(selectedItemKeys)]="selectedBikeRaces"
                 (onSelectionChanged)="onSelectedBikeRacesChanged($event)">
