--- a/src/app/stats/stats.component.html
+++ b/src/app/stats/stats.component.html
@@ -1,4 +1,9 @@
-
+<dx-load-panel
+    #loadPanel
+    shadingColor="rgba(0,0,0,0.4)"
+    [(visible)]="loadingVisible"
+    [showIndicator]="true">
+</dx-load-panel>
 <div class="flex-container">
   <div class="flex-container-col">
   
